@@ -17,6 +17,9 @@
       "tags": "detect-cpu"
     }
   ],
+  "extra_cache_tags_from_env": [
+    {"env":"CM_PYTHON_CACHE_TAGS", "prefix":"python-"}
+  ],
   "tags": [
     "get",
     "onnxruntime",
