@@ -15,6 +15,9 @@
       "tags": "get,python"
     }
   ],
+  "extra_cache_tags_from_env": [
+    {"env":"CM_PYTHON_CACHE_TAGS", "prefix":"python-"}
+  ],
   "tags": [
     "get",
     "transformers",
