@@ -1,3 +1,6 @@
+20220712:
+ * added tags from deps (python, llvm)
+
 20220708:
  * various fixes to handle versions (min/max/default)
 
